refactor:♻️ rollback cors config